2011-08-31 Borut Razem <borut.razem AT gmail.com>

	* local/cf-x86-x86_64-w64-mingw32.mk, local/cf-x86.mk:
	  added Windows 64bit mingw_w64 cross-compilation
	* local/cf-x86-i386-unknown-linux2.5.mk,
	  local/cf-x86-i586-mingw32msvc.mk: moved to local/old

2011-08-26 Borut Razem <borut.razem AT gmail.com>

	* sdcc-build-bootstrap.sh: don't use "make -C"
	* sdcc-build-bootstrap.sh: don't use poshd/popd

2011-08-24 Borut Razem <borut.razem AT gmail.com>

	* components/sdcc.mk: added MAKESILENTFLAG when making sdcc-regression

2011-08-15 Borut Razem <borut.razem AT gmail.com>

	* sdcc-build-bootstrap.sh: fixed typo
	* components/sdcc.mk, lib/variables.mk:
	  each target platform has it's own build irectory

2011-08-14 Borut Razem <borut.razem AT gmail.com>

	* lib/variables.mk: serach for local unix2dos
	* lib/variables.mk, lib/upload.mk: added DCFPORT
	* sdcc-build-bootstrap.sh: don't remove the build if uploading
	* local/derna.mk: x86 build on derna build machine
	* local/cf-x86.mk: disable x86 build
	* local/derna-i586-mingw32msvc.mk: i386 mingw build on derna

2011-08-10 Borut Razem <borut.razem AT gmail.com>

	* lib/doc-archive.mk:
	  sdcc development documentation moved from doc to sdcc wiki

2011-08-02 Borut Razem <borut.razem AT gmail.com>

	* components/sdcc.mk, lib/bootstrap.mk, lib/upload.mk, lib/fetch.mk:
	  added `date` outputs

2011-07-31 Borut Razem <borut.razem AT gmail.com>

	* sdcc-build/sdcc-build-bootstrap.sh: added "Lock released" message

2011-07-24 Borut Razem <borut.razem AT gmail.com>

	* local/cf-x86-i586-mingw32msvc.mk:
	  clear TARGETCCFLAGS and TARGETCXXFLAGS
	* local/mypants.mk, local/netbsd-i386.mk: fixed TARGETLDFLAGS

2011-07-23 Borut Razem <borut.razem AT gmail.com>

	* local/cf-x86.mk, local/cf-x86-i386-unknown-linux2.5.mk,
	  local/mypants.mk, local/dev.mk, local/mirror-doors.mk,
	  local/solaris-x86.mk, local/freebsd-i386.mk, local/netbsd-i386.mk:
	  local includes and libraries paths
